feat: Enhance documentation and add Feign retry configuration
- Added new documentation links for framework design advantages and metrics monitoring guide in README.md.
- Introduced a Feign retryer bean in CloudAutoConfiguration, configurable via application properties.
- Updated OauthUtilService to utilize Caffeine cache for token management, improving performance and memory efficiency.
- Refactored various classes to use Lombok's @Slf4j for logging, reducing boilerplate code.